# piwm

./: .gitignore  CMakeLists.txt
.github/: copilot-instructions.md
cmake/: dependencies.cmake  install.cmake  options.cmake  piwmConfig.cmake
examples/: CMakeLists.txt
include/piwm/: types.hxx  window.hxx
src/: CMakeLists.txt
src/core/: constants.hxx  window_base.cxx  window_base.hxx
src/platform/wayland/: window_wayland.cxx
tests/: CMakeLists.txt
tests/unit/core/: test_window.cxx
